--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "create": "npm run build && npm run deploy"
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
